--- a/views/net.haml
+++ b/views/net.haml
@@ -4,6 +4,8 @@
 
 #main-container.wrapper.clearfix.b{:role => "main"}
     .net-container{style: "padding:20px;"}
-        %h2 "My Net"
+        %h2 My Net (more coming soon...)
+        %center
+            %img{src: "img/net-1.png"}
     
 = haml(:'partials/_footer', :layout => false)
