--- a/views/net.haml
+++ b/views/net.haml
@@ -6,6 +6,6 @@
     .net-container{style: "padding:20px;"}
         %h2 My Net (more coming soon...)
         %center
-            %img{src: "img/net-1.png"}
+            %img.net{src: "img/net-1.png"}
     
 = haml(:'partials/_footer', :layout => false)
