--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -637,7 +637,11 @@ a:hover {
     border: 1px solid rgba(0, 51, 119, 0.5);
     padding: 5px;
     margin-bottom: 1em;
-    width: 95%; } }
+    width: 95%; }
+
+  .net {
+    width: 98%;
+    height: auto; } }
 @media screen and (min-width : 761px) {
   .tag {
     background-color: #445588;
