--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -88,7 +88,9 @@ a:hover{color:$hover-color;}
     }
 }
 @media screen and (max-width : 499px) {}
-@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {}
+@media only screen and (-webkit-min-device-pixel-ratio : 1.5), only screen and (min-device-pixel-ratio : 1.5) {
+    a{border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.25em 0.15em;}
+}
 @media screen and (min-width : 500px) and (max-width : 760px) {}
 @media screen and (min-width : 761px) and (max-width : 1280px) {}
 @media only screen and (min-device-width : 761px) and (max-device-width : 1280px) and (orientation : landscape) {}
