--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -177,7 +177,7 @@ a:hover{color:$hover-color;}
         @media screen and (min-width : 950px) {textarea{width:400px;height:40px;}}
     }
 
-    @media screen and (max-width : 499px) { #left{display:block;} }
+    @media screen and (max-width : 499px) { #left{display:block;} img.user_image{float:left;width:5em;}}
     @media screen and (min-width : 500px) and (max-width : 760px) { #left{float:left;width:21%;display:inline-block;} }
     @media screen and (min-width : 761px) { #left{float:left;width:14%;margin-left:6px;display:inline-block;} }
 
