--- a/views/board.haml
+++ b/views/board.haml
@@ -13,16 +13,17 @@
                         = @board.name
                         %br/
 
-                    - if @show
+                    - if @exists
                         %h3.b Board info:
                         %p= @board.bio
                         %br/
                         
-                        - if @user && !@has_tag
+                        - if !@login && !@has_tag
                             %form.ib{:name => "tag_form", :action => "/#{@user.name}/tag", :method => "post"}
                                 %fieldset{style: "padding:0.2em 0.8em;"}
                                     %legend{style: "font-size:11pt;"} Add this tag:
                                     -# Totally not secure:
+                                    %input{:type => "hidden", :name => "name", value: "#{session[:name]}"}/
                                     %input{:type => "hidden", :name => "pass", value: "#{session[:pass]}"}/
                                     %input{:type => "hidden", :name => "tag", value: "#{@board.name}"}/
                                     %input.btn.r4{:type => "submit", :value => "Add!", style:"margin:5px;"}/
@@ -31,19 +32,19 @@
                 .h.column
                     %h3= "#{@posts.length} posts tagged with #{@board.name}" 
                     %br/
-                    - if @show
+                    - if @exists
                         %p
                             %hr{width:"50%"}/
                         .feed-container= haml(:'partials/_posts_list')
 
-                    - if @create && !@login
+                    - if !@exists && !@login
                         .new_board
                             %h1 No such board exists yet.
                             %form.ib{:name => "board_form", :action => "/board/new", :method => "post"}
                                 %fieldset
                                     %legend You can create it:
                                     %input{:type => "hidden", :name => "pass", value: "#{session[:pass]}"}/
-                                    %input{:type => "hidden", :name => "user", value: "#{session[:name]}"}/
+                                    %input{:type => "hidden", :name => "name", value: "#{session[:name]}"}/
                                     %input{:type => "hidden", :name => "board_name", value: "#{@board.name}"}/
                                     Enter a description:
                                     %textarea{name: "board_desc", cols: "30", rows: "5", style:"margin:5px;"}
