--- a/views/partials/_img_map.haml
+++ b/views/partials/_img_map.haml
@@ -6,10 +6,23 @@
 <area shape="poly" alt="Academics"   title="" coords="370,121,415,90,496,92,537,122,495,157,396,150"    href="#"            target="" />
 <area shape="poly" alt="Classes"     title="" coords="562,113,591,88,652,90,667,118,630,140,583,134"    href="#"            target="" />
 <area shape="poly" alt="Housing"     title="" coords="509,263,548,226,627,235,640,270,602,295,530,296"  href="#"            target="" />
-<area shape="poly" alt="CollegEbook" title="" coords="210,247,259,208,381,211,441,241,386,287,251,287"  href="#"            target="" />
+<area shape="poly" name="CollegEbook" alt="CollegEbook" title="" coords="210,247,259,208,381,211,441,241,386,287,251,287"  href="#"            target="" />
 <area shape="poly" alt="Varsity"     title="" coords="26,384,55,358,105,358,123,385,97,414,41,406"      href="#"            target="" />
 <area shape="poly" alt="Market"      title="" coords="415,368,451,336,514,347,525,373,490,396,433,391"  href="#"            target="" />
 <area shape="poly" alt="Sports"      title="" coords="184,389,211,362,287,358,308,389,274,410,201,411"  href="#"            target="" />
 <area shape="poly" alt="Pickup"      title="" coords="124,469,148,444,209,449,227,476,195,496,142,496"  href="#"            target="" />
 <area shape="poly" alt="IM"          title="" coords="303,464,318,440,362,448,374,471,350,486,314,482"  href="#"            target="" />
 </map>
+/ %ul#img_map_menu.contextMenu
+/     %li.edit
+/         %a{href: "#edit"} Edit
+/     %li.cut.separator
+/         %a{href: "#cut"} Cut
+/     %li.copy
+/         %a{href: "#copy"} Copy
+/     %li.paste
+/         %a{href: "#paste"} Paste
+/     %li.delete
+/         %a{href: "#delete"} Delete
+/     %li.quit.separator
+/         %a{href: "#quit"} Quit
