work on net hover javascript - 4958tugijvf

--- a/views/net.haml
+++ b/views/net.haml
@@ -4,9 +4,10 @@
 
 #main-container.wrapper.clearfix.b{:role => "main"}
     .net-container{style: "padding:20px;"}
-        %h2 My Net (more coming soon...)
+        %h2 My Net
         %center
+            #selections{style: "clear: both; width: 500px; height: 50px; border: 1px solid black;"}
             = haml :'partials/_img_map'
-            %img.net{src: "img/net-1.png", usemap: "#net_map"}
+            %img#net{src: "img/net-1.png", usemap: "#net_map"}
     
 = haml(:'partials/_footer', :layout => false)
