--- a/views/partials/_img_map.haml
+++ b/views/partials/_img_map.haml
@@ -1,18 +1,18 @@
 <map id="img_map" name="net_map">
-<area shape="poly" alt="Clubs"       title="" coords="122,57,172,31,225,55,199,83,143,84,130,75"        href="#"            target="" />
-<area shape="poly" alt="Courses"     title="" coords="326,31,378,4,436,35,410,60,341,58"                href="#"            target="" />
-<area shape="poly" alt="Social"      title="" coords="42,148,73,116,150,116,185,150,146,187,57,175"     href="#"            target="" />
-<area shape="poly" alt="Events"      title="" coords="10,235,45,206,100,220,103,254,55,268,17,260"      href="#"            target="" />
-<area shape="poly" alt="Academics"   title="" coords="370,121,415,90,496,92,537,122,495,157,396,150"    href="#"            target="" />
-<area shape="poly" alt="Classes"     title="" coords="562,113,591,88,652,90,667,118,630,140,583,134"    href="#"            target="" />
-<area shape="poly" alt="Housing"     title="" coords="509,263,548,226,627,235,640,270,602,295,530,296"  href="#"            target="" />
+<area shape="poly" name="clubs" class="clubs" alt="Clubs"       title="" coords="122,57,172,31,225,55,199,83,143,84,130,75"        href="#"            target="" />
+<area shape="poly" name="courses" class="courses" alt="Courses"     title="" coords="326,31,378,4,436,35,410,60,341,58"                href="#"            target="" />
+<area shape="poly" name="social" alt="Social"      title="" coords="42,148,73,116,150,116,185,150,146,187,57,175"     href="#"            target="" />
+<area shape="poly" name="events" alt="Events"      title="" coords="10,235,45,206,100,220,103,254,55,268,17,260"      href="#"            target="" />
+<area shape="poly" name="academics" alt="Academics"   title="" coords="370,121,415,90,496,92,537,122,495,157,396,150"    href="#"            target="" />
+<area shape="poly" name="classes" alt="Classes"     title="" coords="562,113,591,88,652,90,667,118,630,140,583,134"    href="#"            target="" />
+<area shape="poly" name="housing" alt="Housing"     title="" coords="509,263,548,226,627,235,640,270,602,295,530,296"  href="#"            target="" />
 <area shape="poly" name="CollegEbook" alt="CollegEbook" title="" coords="210,247,259,208,381,211,441,241,386,287,251,287"  href="#"            target="" />
-<area shape="poly" alt="Varsity"     title="" coords="26,384,55,358,105,358,123,385,97,414,41,406"      href="#"            target="" />
-<area shape="poly" alt="Market"      title="" coords="415,368,451,336,514,347,525,373,490,396,433,391"  href="#"            target="" />
-<area shape="poly" alt="Sports"      title="" coords="184,389,211,362,287,358,308,389,274,410,201,411"  href="#"            target="" />
-<area shape="poly" alt="Pickup"      title="" coords="124,469,148,444,209,449,227,476,195,496,142,496"  href="#"            target="" />
-<area shape="poly" alt="IM"          title="" coords="303,464,318,440,362,448,374,471,350,486,314,482"  href="#"            target="" />
-</map>
+<area shape="poly" name="varsity" alt="Varsity"     title="" coords="26,384,55,358,105,358,123,385,97,414,41,406"      href="#"            target="" />
+<area shape="poly" name="market" alt="Market"      title="" coords="415,368,451,336,514,347,525,373,490,396,433,391"  href="#"            target="" />
+<area shape="poly" name="sports" alt="Sports"      title="" coords="184,389,211,362,287,358,308,389,274,410,201,411"  href="#"            target="" />
+<area shape="poly" name="pickup" alt="Pickup"      title="" coords="124,469,148,444,209,449,227,476,195,496,142,496"  href="#"            target="" />
+<area shape="poly" name="im" alt="IM"          title="" coords="303,464,318,440,362,448,374,471,350,486,314,482"  href="#"            target="" />
+</map>​
 / %ul#img_map_menu.contextMenu
 /     %li.edit
 /         %a{href: "#edit"} Edit
