--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,8 +21,6 @@
     
     %link{rel: "stylesheet", href: "stylesheets/styles.css", type: "text/css", media: "all"}
 
-    %script{:src => "js/libs/modernizr-2.5.3-respond-1.1.0.min.js"}
-    %script{:src => "js/libs/prefixfree.min.js"}
 %body
     /[if lt IE 7]
         %p.chromeframe 
@@ -43,13 +41,7 @@
             %p
                 pass:
                 = session[:pass]
-    - if @cookie
-        .ib{style: "position: fixed; z-index: 99999; color: #451713"}
-            %p
-                cookie:
-                = @cookie
     = yield
 
-%script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
-%script{:src => "http://pjax.heroku.com/jquery.pjax.js"}
-%script{:src => "js/scripts.js"}
+    / %script{:src => "//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"}
+    %script{:src => "js/scripts.js"}
