continue work on net JS - 9485dsertga4tyiughrw

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -29,7 +29,7 @@
             or
             %a{:href => "http://www.google.com/chromeframe/?redirect=true"} install Google Chrome Frame
             to experience this site.
-    - if session
+    - if false
         .ib{style: "position: fixed; z-index: 99999; color: #ef1010"}
             %p
                 name:
